fix new discussion button display on tablet view

--- a/themes/theme-boilerplate/src/scss/sections/_panel.scss
+++ b/themes/theme-boilerplate/src/scss/sections/_panel.scss
@@ -14,9 +14,22 @@
     @include maxWidth($theme-breakpoint_tablet) {
 
         .SearchBox,
-        .BoxNewDiscussion,
         .BoxCategories {
             display: none;
+        }
+
+        .BoxNewDiscussion.BoxNewDiscussion {
+            margin: $utility-baseUnitTriple 0;
+        }
+
+        .ButtonGroup.Multi,
+        .BigButton {
+            margin-left: auto;
+            margin-right: auto;
+
+            @include maxWidth(500px) {
+                max-width: 100%;
+            }
         }
 
         .Box h4 {
